--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Map the city</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_maps">Map</string>
+    <string name="about_button_text">About</string>
 </resources>
