--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_maps">Map</string>
     <string name="about_button_text">About</string>
+    <string name="search_title">Search</string>
 </resources>
